--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
 .header-text{
     text-align: center;
     color: white;
+    padding-bottom: 150px;
    
 }
 
@@ -38,6 +39,86 @@ body{
     border-radius: 10px;
 }
 
+
+
+
+
+
+
+.danate-today{
+    padding-bottom: 50px;
+    padding-top: 150px;
+}
+
+
+.donate-static{
+    text-align: center;
+}
+
+.donate-static h1{
+    font-size: 70px;
+}
+
+
+.donate-flexible{
+    display: flex; 
+    margin-left: 400px; 
+}
+
+#one{
+    background-color: #FAFAFA;
+    margin: 50px;
+    padding: 30px;
+}
+
+#two{
+    background-color: #FFEEEE;
+    border: 1px solid #FF5959;
+    color: #FF5959;
+    margin: 50px;
+    padding: 35px 20px;
+}
+
+#three{
+    background-color: #FAFAFA;
+    margin: 50px;
+    padding: 30px;
+}
+
+#four{
+    background-color: #FAFAFA;
+    margin: 50px;
+    padding: 30px;
+}
+
+#five{
+    background-color: #FAFAFA;
+    margin: 50px;
+    padding: 30px;
+}
+
+.donate-button{
+    text-align: center;
+    margin: 100px;
+}
+
+.donate-button h3{
+    border-bottom: 1px solid #DADADA;
+    color: #DADADA;
+    font-weight: 100;
+    padding-bottom: 10px;
+    margin: 40px;
+}
+
+
+
+
+
+
+.danate-plan{
+    padding-bottom: 150px;
+}
+
 .static-container{
     text-align: center;
     margin-top: 150px;
@@ -50,6 +131,8 @@ body{
 
 .flexible-container{
     display: flex;
+    padding-left: 200px;
+    padding-right: 200px;
 }
 
 #left{
@@ -73,4 +156,9 @@ body{
     padding: 50px;
 }
 
-    
+
+
+
+
+
+
