--- a/style.css
+++ b/style.css
@@ -162,3 +162,64 @@ body{
 
 
 
+.get-update{
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 50px;
+}
+
+.get-update h1{
+    font-size:70px ;
+}
+
+.button{
+    text-align: center;
+    background-color: #FFF4D6;
+    height: 200px;
+    width: 1100px;
+    margin-left: 400px;
+}
+
+#email{
+    padding-left: 20px;
+    padding-right: 100px;
+    background-color: #D9D9D9;
+    color: white;
+    border: #D9D9D9;
+    padding: 20px 60px;
+    font-size: 20px;
+    margin-top: 70px;
+}
+
+#subscribe{
+    padding: 20px;
+    background-color: #FF5959;
+    color: white;
+    border: #FF5959;
+    padding: 20px 60px;
+    font-size: 20px;
+    margin-top: 70px
+}
+
+.bottom-area{
+    padding-top: 70px;
+    padding-bottom: 150px;
+}
+
+.footer-background{
+    background-color: #0B0D17;
+
+}
+
+.footer-area h1{
+    padding-top: 40px;
+    text-align: center;
+    color: #FF5959;
+}
+
+.footer-area h3{
+    padding-bottom: 40px;
+    text-align: center;
+    color: #7F8189;
+    margin-bottom: 0;
+}
